fix(spacings): not spaced well, making box-shadow in messages wrapper not showing

--- a/src/scss/components/_channel-message-input.scss
+++ b/src/scss/components/_channel-message-input.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   padding: 0;
   margin-bottom: 10px;
+  margin-left: 10px;
 
   // some other container types like "follow the channel"
   .wrapper-2SplAX {
