--- a/src/scss/components/_left-bar-container.scss
+++ b/src/scss/components/_left-bar-container.scss
@@ -6,7 +6,7 @@
 @include anim.ripple-animation-for-channels;
 
 .sidebar-1tnWFu, .sidebar-nqHbhN {
-  margin: 10px 10px 10px 0;
+  margin: 10px 0px 10px 0;
   background-color: transparent;
 
   nav, section {
