--- a/src/scss/components/_messages-wrapper-container.scss
+++ b/src/scss/components/_messages-wrapper-container.scss
@@ -30,7 +30,7 @@
 
 .messagesWrapper-RpOMA3 {
   // adding the spaces
-  margin: 0 10px 10px 0;
+  margin: 10px 10px 10px 10px;
   border-radius: ms.$big-radius;
   box-shadow: tc.$box-shadow;
   background: tc.$background-primary;
